--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "semut-angkot-rest-api",
+  "name": "gps-tracker-tester-api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
